@@ -151,6 +151,8 @@ commit history.
         - Updated buildsystem, including improved checks for dependencies,
           use of current autotools, and skipping the build of intermediate
           non-distributed libraries.
+        - Deprecated IPOPT_FORTRAN_INTEGER_TYPE. This was always assumed
+          to be int. Use ipindex instead.
 
 2021-0x-yy: 3.13.5
         - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
